@@ -1,9 +1,9 @@
 Changes
-examples/ex1.pl
-examples/ex2.pl
-examples/ex3.pl
-examples/ex4.pl
-examples/ex5.pl
+examples/cmp_json_types_fail_array.pl
+examples/cmp_json_types_fail_int_string.pl
+examples/cmp_json_types_ok.pl
+examples/is_json_type_ok_array.pl
+examples/is_json_type_ok_struct.pl
 inc/Module/Install.pm
 inc/Module/Install/AuthorRequires.pm
 inc/Module/Install/AuthorTests.pm
