@@ -1,4 +1,5 @@
 0.05
+ - Rename file names in examples/ dir to better names.
 
 0.04 2022-07-06T16:24:12+02:00
  - Add example for is_json_type() to doc.
